crates/gpui-form-macros/tests/ui/fail/empty_transform.rs
use gpui_form_macros::FormStore;

#[derive(FormStore)]
#[form(transform())]
struct Example {
    value: String,
}

fn main() {}
